# rpa-actions-template

./: README.md  build.sh  pyproject.toml  requirements.txt
.github/workflows/: botcity-ci-cd.yaml  linter.yaml
src/: main.py
